--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <i class="bi bi-list"></i>
+            <i id="hami" class="bi bi-list"></i>
             <i class="bi bi-cart4"></i>
         </header>
         <nav>
